--- a/app/resources/toolbar/toolbar.qrc
+++ b/app/resources/toolbar/toolbar.qrc
@@ -41,5 +41,6 @@
         <file>zoomIn.svg</file>
         <file>zoomOut.svg</file>
         <file>zoomReset.svg</file>
+        <file>verilog.svg</file>
     </qresource>
 </RCC>
